--- a/pom.xml
+++ b/pom.xml
@@ -37,22 +37,29 @@
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
-               <artifactId>jacoco-maven-plugin</artifactId>
-               <version>0.8.10</version> <!-- Usá la última versión disponible -->
-               <executions>
-                 <execution>
-                   <goals>
-                     <goal>prepare-agent</goal>
-                   </goals>
-                 </execution>
-                 <execution>
-                   <id>report</id>
-                   <phase>verify</phase>
-                   <goals>
-                     <goal>report</goal>
-                   </goals>
-                 </execution>
-               </executions>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.10</version>
+                    <executions>
+                      <execution>
+                        <goals>
+                          <goal>prepare-agent</goal>
+                        </goals>
+                      </execution>
+                      <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                          <goal>report</goal>
+                        </goals>
+                      </execution>
+                      <execution>
+                        <id>manual-report</id>
+                        <phase>none</phase>
+                        <goals>
+                          <goal>report</goal>
+                        </goals>
+                      </execution>
+                    </executions>
             </plugin>
             <plugin>
                     <groupId>org.springframework.boot</groupId>
