--- a/pom.xml
+++ b/pom.xml
@@ -62,19 +62,15 @@
                     </executions>
             </plugin>
             <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
+                   <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0</version>
                     <configuration>
-                        <mainClass>com.example.demo.DemoApplication</mainClass> <!-- Ensure this is correct -->
+                      <includes>
+                        <include>**/DemoApplicationTests.java</include>
+                      </includes>
                     </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
+           </plugin>
         </plugins>
     </build>
 </project>
