--- a/pom.xml
+++ b/pom.xml
@@ -37,37 +37,40 @@
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
-                <executions>
-                    <execution>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.10</version>
+                    <executions>
+                      <execution>
                         <goals>
-                            <goal>prepare-agent</goal>
+                          <goal>prepare-agent</goal>
                         </goals>
-                    </execution>
-                    <execution>
+                      </execution>
+                      <execution>
                         <id>report</id>
                         <phase>test</phase>
                         <goals>
-                            <goal>report</goal>
+                          <goal>report</goal>
                         </goals>
-                    </execution>
-                </executions>
+                      </execution>
+                      <execution>
+                        <id>manual-report</id>
+                        <phase>none</phase>
+                        <goals>
+                          <goal>report</goal>
+                        </goals>
+                      </execution>
+                    </executions>
             </plugin>
             <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
+                   <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0</version>
                     <configuration>
-                        <mainClass>com.example.demo.DemoApplication</mainClass> <!-- Ensure this is correct -->
+                      <includes>
+                        <include>**/DemoApplicationTests.java</include>
+                      </includes>
                     </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
+           </plugin>
         </plugins>
     </build>
 </project>
