--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
     </dependencies>
 
     <build>
+         <resources>
+             <resource>
+               <directory>src/main/resources</directory>
+             </resource>
+         </resources>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
